--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-dj-database-url==0.4.2
-Django==1.11
-gunicorn==19.7.1
-pytz==2017.2
-whitenoise==3.3.0
-psycopg2==2.7.1
+dj-database-url==0.5.0
+Django==3.2
+gunicorn==20.1.0
+pytz==2021.1
+whitenoise==5.2.0
+psycopg2-binary==2.8.6
